# CustomPaddleCudaKernel

./: .gitignore  README.md  requirements.txt  setup_cuda.py
CustomPaddleCudaKernel/: README.md  setup_cuda.py
CustomPaddleCudaKernel/paddle/benchmark/: benchmark.py
include/: my_add.h
kernel/: elementwise_add_kernel.cu  gemm_kernel.cu  gemm_kernel.md  multi_head_attention_kernel.cu  multihead_attention.cu  my_add_kernel.cpp  my_add_kernel.cu  my_elementwise_add_kernel.cu  qkv_split_kernel.cu  reduce_kernel.cu  reduce_kernel.md  rms_norm_kernel.cu  rms_norm_kernel.md  softmax_kernel.cu  softmax_kernel.md  transpose_kernel.cu  transpose_kernel.md  utils.h
pytorch/: CMakeLists.txt  setup.py  test_add.py
pytorch/benchmark/: benchmark.py
pytorch/my_add.egg-info/: SOURCES.txt
tests/: test_attention.py  test_element_wise_add.py  test_gemm.py  test_kernel.py  test_qkv_split.py  test_reduce_sum.py  test_rms_norm_kernel.py  test_softmax.py  test_transpose.py
